[package]
name = "exonum-ML"
version = "0.1.0"
authors = ["habibagamal <habibabassem@aucegypt.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exonum = "1.0.0-rc.1"
exonum-crypto = "1.0.0-rc.1"
exonum-derive = "1.0.0-rc.1"
exonum-proto = "1.0.0-rc.1"
exonum-rust-runtime = "1.0.0-rc.1"
exonum-merkledb = "1.0.0-rc.1"
futures = "0.3"
exonum-cli = "1.0.0"
exonum-node = "1.0.0"
rand = "0.7.2"
lazy_static = "1.4.0"

anyhow = "1.0"
failure = "0.1.5"
protobuf = "2.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

itertools = "0.9.0"

colored = "2.0.0"
backtrace = "0.3.56"

[patch.crates-io]
exonum = { path = "./patches/exonum" }
exonum-node = { path = "./patches/exonum-node" }
exonum-api = { path = "./patches/exonum-api"}
exonum-cli = { path = "./patches/exonum-cli"}

[dependencies.tokio]
version = "0.2.22"
features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "tcp", "time"]


[dependencies.hex]
version = "0.4.2"

[build-dependencies]
exonum-build = "1.0.0-rc.1"

# Dependencies required for the example.
[dev-dependencies]
exonum-node = "1.0.0-rc.1"
exonum-cli = "1.0.0-rc.1"
exonum-testkit = "1.0.0-rc.1"
exonum-explorer-service = "1.0.0-rc.1"
assert_matches = "1.2.0"
pretty_assertions = "0.6.1"


[dev-dependencies.tokio]
version = "0.2.13"
features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "tcp", "time"]

[features]
default = ["with-serde"]
with-serde = []
